[KAN-59] DailyTodo main ui

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
-:root {
+html,
+body,
+#root {
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100dvh;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  color: inherit;
   text-decoration: none;
 }
